--- a/mobile/Services/Automotive Services/AutoMotiveSvs.html
+++ b/mobile/Services/Automotive Services/AutoMotiveSvs.html
@@ -39,7 +39,43 @@
     </div>
 
  <!-- Main Content -->
+      <div class="automotive-container">
+        <div class="automotive-contents">
+          <h1 class="automotive-h1">
+            Automotive Locksmith
+          </h1>
 
+          <h2 class="automotive-h2">
+            Tired of Getting Locked?
+          </h2>
+          <p class="automotive-p">
+            Car lockouts can be frustrating, but they don't have to ruin your day. Whether it's a door lock, car padlock, or any other vehicle lock, our automotive locksmith experts are ready to assist. With their specialized vehicles, they can reach you anywhere in Metro Manila and nearby provinces, ensuring you're back on the road in no time. And for those distressing moments of lost car keys, rest easy knowing our professionals will only duplicate or fabricate a key under the watchful eye of the confirmed car owner. Your car's security is our top priority.
+          </p>
+
+          <h3 class="automotive-h3">
+            We Offer These Services To You!
+          </h3>
+
+          <p class="automotive-p">
+            <ul class="automotive-ul">
+              <li>Givi Box Lock (Motorcycle)</li>
+              <li>All Keys Motorlock</li>
+              <li>All Lost Key Car Services</li>
+              <li>Motorcycle Key Duplication</li>
+              <li>Car Key Duplication</li>
+              <li>Car Key Programming</li>
+            </ul>
+          </p>
+
+          <div class="image-contents">
+            <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+            <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+            <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+            <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+          </div>
+
+        </div>
+      </div>
 
  
   </div>
