--- a/mobile/Services/Glassdoor Services/glassdoor.html
+++ b/mobile/Services/Glassdoor Services/glassdoor.html
@@ -39,7 +39,41 @@
     </div>
 
  <!-- Main Content -->
+ <div class="glassdoor-container">
+  <div class="glassdoor-contents">
+    <h1 class="glassdoor-h1">
+      Glassdoor Services
+    </h1>
 
+    <h2 class="glassdoor-h2">
+      Transparent Solutions for Your Glass Door Needs
+    </h2>
+    <p class="glassdoor-p">
+      Glass doors add a touch of elegance and modernity to any space. However, they come with their own set of challenges. Be it a faulty lock, alignment issues, or a sudden crack, our glass door services are designed to address all these and more. Let our experts bring clarity and functionality back to your glass doors, making them as beautiful and secure as they were on day one.
+    </p>
+
+    <h3 class="glassdoor-h3">
+      We Offer These Services To You!
+    </h3>
+
+    <p class="glassdoor-p">
+      <ul class="glassdoor-ul">
+        <li>Patchlock Replacement</li>
+        <li>Patchlock Repair</li>
+        <li>Glassdoor Alignment</li>
+        <li>Patchfitting Replacement</li>
+        <li>Door Closer Installations</li>
+        <li> Door Closer Adjustments</li>
+        <li>Aluminum Glassdoor Lock Installation</li>
+      </ul>
+    </p>
+
+    <div class="glassdoor-image-contents">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+    </div>
 
   </div>
   
