--- a/mobile/Services/Key Duplication Services/KeyDupeSvs.html
+++ b/mobile/Services/Key Duplication Services/KeyDupeSvs.html
@@ -39,7 +39,41 @@
     </div>
 
  <!-- Main Content -->
+ <div class="keydupe-container">
+  <div class="keydupe-contents">
+    <h1 class="keydupe-h1">
+      Key Duplication Services
+    </h1>
 
+    <h2 class="keydupe-h2">
+      Unlock the Convenience with Our Expert Key Duplication Services
+    </h2>
+    <p class="keydupe-p">
+      Misplaced a key or simply need an extra one for emergencies? Our key duplication services are at your rescue. Using the latest technology and precision equipment, we ensure that each duplicate key is crafted to perfection, aligning seamlessly with the original. Every key we duplicate undergoes rigorous testing to ensure it works just as efficiently as your original one. Say goodbye to key-related worries and always have a backup with our efficient key duplication services.
+    </p>
+
+    <h3 class="keydupe-h3">
+      We Offer These Services To You!
+    </h3>
+
+    <p class="keydupe-p">
+      <ul class="keydupe-ul">
+        <li>Dimple Key Duplication</li>
+        <li>Special Key Duplication</li>
+        <li>Regular Key Duplication</li>
+        <li>Customized Key Duplication</li>
+        <li>Vault Key Duplication</li>
+        <li>Car Key Duplication</li>
+        <li>Broken Key Duplication</li>
+      </ul>
+    </p>
+
+    <div class="keydupe-image-contents">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+    </div>
 
   </div>
   
