--- a/mobile/Services/Vault Services/vaultsvs.html
+++ b/mobile/Services/Vault Services/vaultsvs.html
@@ -39,6 +39,44 @@
     </div>
 
  <!-- Main Content -->
+ <div class="vaultsvs-container">
+  <div class="vaultsvs-contents">
+    <h1 class="vaultsvs-h1">
+      Locksmith Services
+    </h1>
+
+    <h2 class="vaultsvs-h2">
+     Your 24/7 Guardian Angel for All Lock Issues
+     </h2>
+    
+     <p class="vaultsvs-p">
+      Locked out of your home or office? Or maybe there's a troublesome lock that just won't budge? Fret not! Our team of professional locksmiths is just a call away. With years of experience under their belt, they're equipped to tackle any lock problem, ensuring you regain access swiftly and safely. Available around the clock, our locksmiths are committed to providing you with peace of mind, regardless of the time or place.
+     </p>
+
+    <h3 class="vaultsvs-h3">
+      We Offer These Services To You!
+    </h3>
+
+    <p class="vaultsvs-p">
+      <ul class="vaultsvs-ul">
+        <li>Key Fitting (Fabrication)</li>
+        <li>Broken Key Removal</li>
+        <li>Door Locked Opening</li>
+        <li>Force Opening of Lock</li>
+        <li>Chage Combination</li>
+        <li>Supply & Installation of New Lock</li>
+        <li>Lock Repair</li>
+        <li>Lauggage & Bag Lock Opening</li>
+        <li>Smartlock Installations</li>
+      </ul>
+    </p>
+
+    <div class="vaultsvs-image-contents">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/mobile/Images/background.jpeg" class="img-contents" alt="Image-">
+    </div>
 
 
   </div>
