--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,13 @@
     <!-- Banner / Background IMG -->
     <div class="banner-contact">
       <div class="navbar">
-        <!-- Add mobile menu icon -->
+
         <button class="menu-icon" aria-label="Mobile Menu">&#9776;</button>
         <!-- Add the mobile navigation menu items -->
         <nav class="mobile-menu">
           <ul>
             <a href="/index.html"><img src="/MKSVS LOGO/080323_MKSVS_Logo.png" class="logo" alt="Masterlock Key & Safe-Vault Logo"></a>
+            <ul class="navbar-text">
             <li><a href="/home.html">HOME</a></li>
             <li><a href="/about.html">ABOUT</a></li>
             <li class="dropdown">
@@ -41,6 +42,7 @@
               </ul>
             </li>
             <li><a href="/contact.html">CONTACT</a></li>
+            </ul>
           </ul>
         </nav>
       </div>
