--- a/Services/Automotive Services/AutoMotiveSvs.html
+++ b/Services/Automotive Services/AutoMotiveSvs.html
@@ -70,10 +70,26 @@
           </p>
 
           <div class="image-contents">
-            <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-            <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-            <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-            <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
+            <img src="/Images/automotive 1.jpeg" class="img-contents" alt="Image-1">
+            <img src="/Images/automotive 2.jpeg" class="img-contents" alt="Image-2">
+            <img src="/Images/automotive 3.jpeg" class="img-contents" alt="Image-3">
+            <img src="/Images/automotive 4.jpeg" class="img-contents" alt="Image-4">
+            <img src="/Images/automotive 5.jpeg" class="img-contents" alt="Image-5">
+            <img src="/Images/automotive 6.jpeg" class="img-contents" alt="Image-6">
+            <img src="/Images/automotive 7.jpeg" class="img-contents" alt="Image-7">
+            <img src="/Images/automotive 8.jpeg" class="img-contents" alt="Image-8">
+            <img src="/Images/automotive 9.jpeg" class="img-contents" alt="Image-9">
+            <img src="/Images/automotive 10.jpeg" class="img-contents" alt="Image-10">
+            <img src="/Images/automotive 11.jpeg" class="img-contents" alt="Image-11">
+            <img src="/Images/automotive 12.jpeg" class="img-contents" alt="Image-12">
+            <img src="/Images/automotive 13.jpeg" class="img-contents" alt="Image-13">
+            <img src="/Images/automotive 14.jpeg" class="img-contents" alt="Image-14">
+            <img src="/Images/automotive 15.jpeg" class="img-contents" alt="Image-15">
+            <img src="/Images/automotive 16.jpeg" class="img-contents" alt="Image-15">
+            <img src="/Images/automotive 17.jpeg" class="img-contents" alt="Image-15">
+            <img src="/Images/automotive 18.jpeg" class="img-contents" alt="Image-15">
+            <img src="/Images/automotive 19.jpeg" class="img-contents" alt="Image-15">
+            <img src="/Images/automotive 20.jpeg" class="img-contents" alt="Image-15">
           </div>
 
         </div>
