Added New Images each services

--- a/Services/Commercial Locksmith Services/CommerLocksmithSvs.html
+++ b/Services/Commercial Locksmith Services/CommerLocksmithSvs.html
@@ -73,10 +73,11 @@
     </p>
 
     <div class="commercial-image-contents">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/Images/Box Lock.jpeg" class="img-contents" alt="Image-1">
+      <img src="/Images/Mailbox Lock.jpg" class="img-contents" alt="Image-2">
+      <img src="/Images/MObile Pedestal.jpeg" class="img-contents" alt="Image-3">
+      <img src="/Images/Cashbox.jpg" class="img-contents" alt="Image-4">
+      <img src="/Images/Door Installation.jpeg" class="img-contents" alt="Image-5">
     </div>
 
   </div>
