--- a/Services/Glassdoor Services/glassdoor.html
+++ b/Services/Glassdoor Services/glassdoor.html
@@ -71,10 +71,11 @@
     </p>
 
     <div class="glassdoor-image-contents">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/Images/glassdoorsvs.jpg" class="img-contents" alt="Image-1">
+      <img src="/Images/Glassdoorrrr.jpg" class="img-contents" alt="Image-2">
+      <img src="/Images/Glassdoorssdsds.jpeg" class="img-contents" alt="Image-3">
+      <img src="/Images/Patchlock.jpeg" class="img-contents" alt="Image-4">
+      <img src="/Images/Patchlock2.jpeg" class="img-contents" alt="Image-5">
     </div>
 
   </div>
