--- a/Services/Key Duplication Services/KeyDupeSvs.html
+++ b/Services/Key Duplication Services/KeyDupeSvs.html
@@ -71,10 +71,19 @@
     </p>
 
     <div class="keydupe-image-contents">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/Images/Key Dupe.jpeg" class="img-contents" alt="Image-1">
+      <img src="/Images/Key Dupe 2.jpeg" class="img-contents" alt="Image-2">
+      <img src="/Images/Key Dupe 3.jpeg" class="img-contents" alt="Image-3">
+      <img src="/Images/Key Dupe 4.jpeg" class="img-contents" alt="Image-4">
+      <img src="/Images/Key Dupe 5.jpeg" class="img-contents" alt="Image-5">
+      <img src="/Images/Key Dupe 6.jpeg" class="img-contents" alt="Image-6">
+      <img src="/Images/Key Dupe 7.jpeg" class="img-contents" alt="Image-7">
+      <img src="/Images/Key Dupe 8.jpeg" class="img-contents" alt="Image-8">
+      <img src="/Images/Key Dupe 9.jpeg" class="img-contents" alt="Image-9">
+      <img src="/Images/Key Dupe 10.jpeg" class="img-contents" alt="Image-10">
+      <img src="/Images/Key Dupe 11.jpeg" class="img-contents" alt="Image-11">
+      <img src="/Images/Key Dupe 12.jpeg" class="img-contents" alt="Image-12">
+      <img src="/Images/Key Dupe 13.jpeg" class="img-contents" alt="Image-13">
     </div>
 
   </div>
