--- a/Services/Locksmith Services/locksmithsvs.html
+++ b/Services/Locksmith Services/locksmithsvs.html
@@ -74,10 +74,15 @@
     </p>
 
     <div class="locksmith-image-contents">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
-      <img src="/Images/background.jpeg" class="img-contents" alt="Image-">
+      <img src="/Images/Key Dupe 3.jpeg" class="img-contents" alt="Image-1">
+      <img src="/Images/Door Installation.jpeg" class="img-contents" alt="Image-2">
+      <img src="/Images/Box Lock.jpeg" class="img-contents" alt="Image-3">
+      <img src="/Images/Locksmith.jpeg" class="img-contents" alt="Image-4">
+      <img src="/Images/LockSmith 2.jpeg" class="img-contents" alt="Image-5">
+      <img src="/Images/Locksmith 3.jpeg" class="img-contents" alt="Image-6">
+      <img src="/Images/Locksmith 4.jpeg" class="img-contents" alt="Image-7">
+      <img src="/Images/Locksmith 5.jpeg" class="img-contents" alt="Image-8">
+      <img src="/Images/Locksmith 6.jpeg" class="img-contents" alt="Image-9">
     </div>
 
   </div>
