--- a/Services/Commercial Locksmith Services/CommerLocksmithSvs.html
+++ b/Services/Commercial Locksmith Services/CommerLocksmithSvs.html
@@ -72,12 +72,17 @@
       </ul>
     </p>
 
-    <div class="commercial-image-contents">
-      <img src="/Images/Box Lock.jpeg" class="img-contents" alt="Image-1">
-      <img src="/Images/Mailbox Lock.jpg" class="img-contents" alt="Image-2">
-      <img src="/Images/MObile Pedestal.jpeg" class="img-contents" alt="Image-3">
-      <img src="/Images/Cashbox.jpg" class="img-contents" alt="Image-4">
-      <img src="/Images/Door Installation.jpeg" class="img-contents" alt="Image-5">
+    <div class="gallery">
+      <img src="/Images/Box Lock.jpeg" class="gallery-img" alt="Image-1">
+      <img src="/Images/Mailbox Lock.jpg" class="gallery-img" alt="Image-2">
+      <img src="/Images/MObile Pedestal.jpeg" class="gallery-img" alt="Image-3">
+      <img src="/Images/Cashbox.jpg" class="gallery-img" alt="Image-4">
+      <img src="/Images/Door Installation.jpeg" class="gallery-img" alt="Image-5">
+    </div>
+    
+    <div class="popup" id="popup">
+      <span class="close" id="close">&times;</span>
+      <img src="" alt="Popup Image" class="popup-img" id="popupImg">
     </div>
 
   </div>
