--- a/Services/Key Duplication Services/KeyDupeSvs.html
+++ b/Services/Key Duplication Services/KeyDupeSvs.html
@@ -12,80 +12,90 @@
 </head>
 <body>
   <!-- Banner / Background IMG -->
+  
   <div class="banner">
-    <div class="navbar">
+        <div class="navbar">
 
-      <button class="menu-icon" aria-label="Mobile Menu">&#9776;</button>
-      <!-- Add the mobile navigation menu items -->
-      <nav class="mobile-menu">
-        <a href="/index.html"><img src="/MKSVS LOGO/080323_MKSVS_Logo.png" class="logo" alt="Masterlock Key & Safe-Vault Logo"></a>
-        <ul>
-          <ul class="navbar-text">
-          <li><a href="/home.html">HOME</a></li>
-          <li><a href="/about.html">ABOUT</a></li>
-          <li class="dropdown">
-            <a href="#">SERVICES ▾</a>
-            <ul class="dropdown-content">
-              <li><a href="/Services/Key Duplication Services/KeyDupeSvs.html">Key Duplication Services</a></li>
-              <li><a href="/Services/Locksmith Services/locksmithsvs.html">Locksmith Services</a></li>
-              <li><a href="/Services/Commercial Locksmith Services/CommerLocksmithSvs.html">Commercial Lock Smith Services</a></li>
-              <li><a href="/Services/Automotive Services/AutoMotiveSvs.html">Automotive Services</a></li>
-              <li><a href="/Services/Glassdoor Services/glassdoor.html">Glassdoor Services</a></li>
-              <li><a href="/Services/Vault Services/vaultsvs.html">Vault Services</a></li>
+          <button class="menu-icon" aria-label="Mobile Menu">&#9776;</button>
+          <!-- Add the mobile navigation menu items -->
+          <nav class="mobile-menu">
+            <a href="/index.html"><img src="/MKSVS LOGO/080323_MKSVS_Logo.png" class="logo" alt="Masterlock Key & Safe-Vault Logo"></a>
+            <ul>
+              <ul class="navbar-text">
+              <li><a href="/home.html">HOME</a></li>
+              <li><a href="/about.html">ABOUT</a></li>
+              <li class="dropdown">
+                <a href="#">SERVICES ▾</a>
+                <ul class="dropdown-content">
+                  <li><a href="/Services/Key Duplication Services/KeyDupeSvs.html">Key Duplication Services</a></li>
+                  <li><a href="/Services/Locksmith Services/locksmithsvs.html">Locksmith Services</a></li>
+                  <li><a href="/Services/Commercial Locksmith Services/CommerLocksmithSvs.html">Commercial Lock Smith Services</a></li>
+                  <li><a href="/Services/Automotive Services/AutoMotiveSvs.html">Automotive Services</a></li>
+                  <li><a href="/Services/Glassdoor Services/glassdoor.html">Glassdoor Services</a></li>
+                  <li><a href="/Services/Vault Services/vaultsvs.html">Vault Services</a></li>
+                </ul>
+              </li>
+              <li><a href="/contact.html">CONTACT</a></li>
+              </ul>
             </ul>
-          </li>
-          <li><a href="/contact.html">CONTACT</a></li>
-          </ul>
-        </ul>
-      </nav>
-    </div>
+          </nav>
+        </div>
 
  <!-- Main Content -->
- <div class="keydupe-container">
-  <div class="keydupe-contents">
-    <h1 class="keydupe-h1">
-      Key Duplication Services
-    </h1>
+      <div class="keydupe-container">
+        <div class="keydupe-contents">
+          <h1 class="keydupe-h1">
+            Key Duplication Services
+          </h1>
 
-    <h2 class="keydupe-h2">
-      Unlock the Convenience with Our Expert Key Duplication Services
-    </h2>
-    <p class="keydupe-p">
-      Misplaced a key or simply need an extra one for emergencies? Our key duplication services are at your rescue. Using the latest technology and precision equipment, we ensure that each duplicate key is crafted to perfection, aligning seamlessly with the original. Every key we duplicate undergoes rigorous testing to ensure it works just as efficiently as your original one. Say goodbye to key-related worries and always have a backup with our efficient key duplication services.
-    </p>
+          <h2 class="keydupe-h2">
+            Unlock the Convenience with Our Expert Key Duplication Services
+          </h2>
+          <p class="keydupe-p">
+            Misplaced a key or simply need an extra one for emergencies? Our key duplication services are at your rescue. Using the latest technology and precision equipment, we ensure that each duplicate key is crafted to perfection, aligning seamlessly with the original. Every key we duplicate undergoes rigorous testing to ensure it works just as efficiently as your original one. Say goodbye to key-related worries and always have a backup with our efficient key duplication services.
+          </p>
 
-    <h3 class="keydupe-h3">
-      We Offer These Services To You!
-    </h3>
+          <h3 class="keydupe-h3">
+            We Offer These Services To You!
+          </h3>
 
-    <p class="keydupe-p">
-      <ul class="keydupe-ul">
-        <li>Dimple Key Duplication</li>
-        <li>Special Key Duplication</li>
-        <li>Regular Key Duplication</li>
-        <li>Customized Key Duplication</li>
-        <li>Vault Key Duplication</li>
-        <li>Car Key Duplication</li>
-        <li>Broken Key Duplication</li>
-      </ul>
-    </p>
+          <p class="keydupe-p">
+            <ul class="keydupe-ul">
+              <li>Dimple Key Duplication</li>
+              <li>Special Key Duplication</li>
+              <li>Regular Key Duplication</li>
+              <li>Customized Key Duplication</li>
+              <li>Vault Key Duplication</li>
+              <li>Car Key Duplication</li>
+              <li>Broken Key Duplication</li>
+            </ul>
+          </p>
+        </div>
 
-    <div class="keydupe-image-contents">
-      <img src="/Images/Key Dupe.jpeg" class="img-contents" alt="Image-1">
-      <img src="/Images/Key Dupe 2.jpeg" class="img-contents" alt="Image-2">
-      <img src="/Images/Key Dupe 3.jpeg" class="img-contents" alt="Image-3">
-      <img src="/Images/Key Dupe 4.jpeg" class="img-contents" alt="Image-4">
-      <img src="/Images/Key Dupe 5.jpeg" class="img-contents" alt="Image-5">
-      <img src="/Images/Key Dupe 6.jpeg" class="img-contents" alt="Image-6">
-      <img src="/Images/Key Dupe 7.jpeg" class="img-contents" alt="Image-7">
-      <img src="/Images/Key Dupe 8.jpeg" class="img-contents" alt="Image-8">
-      <img src="/Images/Key Dupe 9.jpeg" class="img-contents" alt="Image-9">
-      <img src="/Images/Key Dupe 10.jpeg" class="img-contents" alt="Image-10">
-      <img src="/Images/Key Dupe 11.jpeg" class="img-contents" alt="Image-11">
-      <img src="/Images/Key Dupe 12.jpeg" class="img-contents" alt="Image-12">
-      <img src="/Images/Key Dupe 13.jpeg" class="img-contents" alt="Image-13">
-    </div>
+        </div>
 
+        <div class="gallery">
+          <img src="/Images/Key Dupe.jpeg" alt="Image 1" class="gallery-img">
+          <img src="/Images/Key Dupe 2.jpeg" alt="Image 2" class="gallery-img">
+          <img src="/Images/Key Dupe 3.jpeg" alt="Image 3" class="gallery-img">
+          <img src="/Images/Key Dupe 4.jpeg" alt="Image 4" class="gallery-img">
+          <img src="/Images/Key Dupe 5.jpeg" alt="Image 5" class="gallery-img">
+          <img src="/Images/Key Dupe 6.jpeg" alt="Image 6" class="gallery-img">
+          <img src="/Images/Key Dupe 7.jpeg" alt="Image 7" class="gallery-img">
+          <img src="/Images/Key Dupe 8.jpeg" alt="Image 8" class="gallery-img">
+          <img src="/Images/Key Dupe 9.jpeg" alt="Image 9" class="gallery-img">
+          <img src="/Images/Key Dupe 10.jpeg" alt="Image 10" class="gallery-img">
+          <img src="/Images/Key Dupe 11.jpeg" alt="Image 11" class="gallery-img">
+          <img src="/Images/Key Dupe 12.jpeg" alt="Image 12" class="gallery-img">
+          <img src="/Images/Key Dupe 13.jpeg" alt="Image 13" class="gallery-img">
+          <!-- Add more images as needed -->
+        </div>
+      
+        <div class="popup" id="popup">
+          <span class="close" id="close">&times;</span>
+          <img src="" alt="Popup Image" class="popup-img" id="popupImg">
+        </div>
+        
   </div>
   
 
