--- a/Services/Vault Services/vaultsvs.html
+++ b/Services/Vault Services/vaultsvs.html
@@ -45,15 +45,15 @@
  <div class="vaultsvs-container">
   <div class="vaultsvs-contents">
     <h1 class="vaultsvs-h1">
-      Locksmith Services
+      Vault Services
     </h1>
 
     <h2 class="vaultsvs-h2">
-     Your 24/7 Guardian Angel for All Lock Issues
+      Your Treasure's Guardian
      </h2>
     
      <p class="vaultsvs-p">
-      Locked out of your home or office? Or maybe there's a troublesome lock that just won't budge? Fret not! Our team of professional locksmiths is just a call away. With years of experience under their belt, they're equipped to tackle any lock problem, ensuring you regain access swiftly and safely. Available around the clock, our locksmiths are committed to providing you with peace of mind, regardless of the time or place.
+      Vaults are the epitome of security, but what happens when you're locked out or forget the combination? Our vault services are here to ensure that your valuables remain accessible to you and only you. Whether it's a combination change, maintenance, or an emergency opening, we approach each task with utmost care and precision. If you've forgotten your combination, we'll first attempt a non-invasive approach. And in rare cases where drilling is needed, our experts ensure your vault remains as robust and functional as ever. For banks and pawnshops, we also supply advanced TIME-DELAY LOCKS and other state-of-the-art security products to bolster your defenses.
      </p>
 
     <h3 class="vaultsvs-h3">
@@ -62,29 +62,48 @@
 
     <p class="vaultsvs-p">
       <ul class="vaultsvs-ul">
-        <li>Key Fitting (Fabrication)</li>
-        <li>Broken Key Removal</li>
-        <li>Door Locked Opening</li>
-        <li>Force Opening of Lock</li>
-        <li>Chage Combination</li>
-        <li>Supply & Installation of New Lock</li>
-        <li>Lock Repair</li>
-        <li>Lauggage & Bag Lock Opening</li>
-        <li>Smartlock Installations</li>
+        <li>Change Combination or Resetting of Number</li>
+        <li>Vault Maintenance (Greasing and oiling of Safe-Vault Components).</li>
+        <li>If you forgot the combination number, the first option we do
+          is opening by tracing (trial and error).
+          </li>
+        <li>Second option is Force opening (by drilling) and repair at
+          the same time that you could still use the safe as good as new
+          one.
+          </li>
       </ul>
+
+      <h3 class="vaultsvs-h3">
+        For Banks & Pawnshops
+      </h3>
+
+      <p class="vaultsvs-p">
+        <ul class="vaultsvs-ul"> 
+          <li>We supply Time-Delay Lock and other security products</li>
+        </ul>
     </p>
 
-    <div class="vaultsvs-image-contents">
-      <img src="/Images/Vault.jpeg" class="img-contents" alt="Image-1">
-      <img src="/Images/Vault 2.jpeg" class="img-contents" alt="Image-2">
-      <img src="/Images/Vault 3.jpeg" class="img-contents" alt="Image-3">
-      <img src="/Images/Vault 4.jpeg" class="img-contents" alt="Image-4">
-      <img src="/Images/Vault 5.jpeg" class="img-contents" alt="Image-5">
-      <img src="/Images/Vault 6.jpeg" class="img-contents" alt="Image-6">
-      <img src="/Images/Vault 7.jpeg" class="img-contents" alt="Image-7">
-      <img src="/Images/Vault 8.jpeg" class="img-contents" alt="Image-8">
-    </div>
 
+
+
+  </div>
+
+  <div class="gallery">
+    <img src="/Images/Vault.jpeg" alt="Image 1" class="gallery-img">
+    <img src="/Images/Vault 2.jpeg" alt="Image 2" class="gallery-img">
+    <img src="/Images/Vault 3.jpeg" alt="Image 3" class="gallery-img">
+    <img src="/Images/Vault 4.jpeg" alt="Image 4" class="gallery-img">
+    <img src="/Images/Vault 5.jpeg" alt="Image 5" class="gallery-img">
+    <img src="/Images/Vault 6.jpeg" alt="Image 6" class="gallery-img">
+    <img src="/Images/Vault 7.jpeg" alt="Image 7" class="gallery-img">
+    <img src="/Images/Vault 8.jpeg" alt="Image 8" class="gallery-img">
+    <!-- Add more images as needed -->
+  </div>
+
+  <div class="popup" id="popup">
+    <span class="close" id="close">&times;</span>
+    <img src="" alt="Popup Image" class="popup-img" id="popupImg">
+  </div>
 
   </div>
   
