--- a/Services/Glassdoor Services/glassdoor.html
+++ b/Services/Glassdoor Services/glassdoor.html
@@ -70,12 +70,17 @@
       </ul>
     </p>
 
-    <div class="glassdoor-image-contents">
-      <img src="/Images/glassdoorsvs.jpg" class="img-contents" alt="Image-1">
-      <img src="/Images/Glassdoorrrr.jpg" class="img-contents" alt="Image-2">
-      <img src="/Images/Glassdoorssdsds.jpeg" class="img-contents" alt="Image-3">
-      <img src="/Images/Patchlock.jpeg" class="img-contents" alt="Image-4">
-      <img src="/Images/Patchlock2.jpeg" class="img-contents" alt="Image-5">
+    <div class="gallery">
+      <img src="/Images/glassdoorsvs.jpg" class="gallery-img" alt="Image-1">
+      <img src="/Images/Glassdoorrrr.jpg" class="gallery-img" alt="Image-2">
+      <img src="/Images/Glassdoorssdsds.jpeg" class="gallery-img" alt="Image-3">
+      <img src="/Images/Patchlock.jpeg" class="gallery-img" alt="Image-4">
+      <img src="/Images/Patchlock2.jpeg" class="gallery-img" alt="Image-5">
+    </div>
+  
+    <div class="popup" id="popup">
+      <span class="close" id="close">&times;</span>
+      <img src="" alt="Popup Image" class="popup-img" id="popupImg">
     </div>
 
   </div>
