--- a/Services/Locksmith Services/locksmithsvs.html
+++ b/Services/Locksmith Services/locksmithsvs.html
@@ -73,19 +73,24 @@
       </ul>
     </p>
 
-    <div class="locksmith-image-contents">
-      <img src="/Images/Key Dupe 3.jpeg" class="img-contents" alt="Image-1">
-      <img src="/Images/Door Installation.jpeg" class="img-contents" alt="Image-2">
-      <img src="/Images/Box Lock.jpeg" class="img-contents" alt="Image-3">
-      <img src="/Images/Locksmith.jpeg" class="img-contents" alt="Image-4">
-      <img src="/Images/LockSmith 2.jpeg" class="img-contents" alt="Image-5">
-      <img src="/Images/Locksmith 3.jpeg" class="img-contents" alt="Image-6">
-      <img src="/Images/Locksmith 4.jpeg" class="img-contents" alt="Image-7">
-      <img src="/Images/Locksmith 5.jpeg" class="img-contents" alt="Image-8">
-      <img src="/Images/Locksmith 6.jpeg" class="img-contents" alt="Image-9">
+    <div class="gallery">
+      <img src="/Images/Key Dupe 3.jpeg" class="gallery-img" alt="Image-1">
+      <img src="/Images/Door Installation.jpeg" class="gallery-img" alt="Image-2">
+      <img src="/Images/Box Lock.jpeg" class="gallery-img" alt="Image-3">
+      <img src="/Images/Locksmith.jpeg" class="gallery-img" alt="Image-4">
+      <img src="/Images/LockSmith 2.jpeg" class="gallery-img" alt="Image-5">
+      <img src="/Images/Locksmith 3.jpeg" class="gallery-img" alt="Image-6">
+      <img src="/Images/Locksmith 4.jpeg" class="gallery-img" alt="Image-7">
+      <img src="/Images/Locksmith 5.jpeg" class="gallery-img" alt="Image-8">
+      <img src="/Images/Locksmith 6.jpeg" class="gallery-img" alt="Image-9">
     </div>
-
+  
+    <div class="popup" id="popup">
+      <span class="close" id="close">&times;</span>
+      <img src="" alt="Popup Image" class="popup-img" id="popupImg">
+    </div>
   </div>
+ </div>
   
 
   <script src="/script.js"></script>
