Added Animations for Index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
         <!-- Main Content -->
-                  <div class="content">
+                  <div class="content tracking-in-expand">
                     <h1>MKSVS Enterprise Corporation</h1>
                     <p class="formerly-temp">(Masterlock-key & Safe-Vault Specialist)</p>
                     <p>Your 24/7 Friendly Neighbourhood Locksmith Since 1994.</p>
