--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masterlock Key & Safe-Vault Specialists</title>
+    <title>Masterlock-Key & Safe-Vault Specialist</title>
     <meta name="description" content="Welcome to Masterlock Key & Safe-Vault Specialists. We offer locksmith and key duplication services for residential, commercial, and automotive needs. Contact us now for expert services.">
     <meta name="keywords" content="locksmith, key duplication, safe, vault, automotive services, commercial locksmith, Masterlock Key & Safe-Vault Specialists, Masterlock Makati, Masterlock-key Makati, Car Key Programming, Car Key Duplicate">
-    <link rel="icon" href="/MKSVS LOGO/080323_MKSVS_LogoICON.png" type="image/x-icon">
+    <link rel="icon" href="/MKSVS LOGO/080323_MKSVS_LogoICON.png" type="image/png">
+    <link rel="shortcut icon" href="/MKSVS LOGO/080323_MKSVS_LogoICON.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="/styles.css">
     
