Minor Optimization for Mobile Devices

--- a/home.html
+++ b/home.html
@@ -90,6 +90,7 @@
       brands like SCHLAGE, ABLOY, YALE, MASTERLOCK, MUL-T–LOCK, CORBIN, and more.</p>
 
     <a class="contact-button" href="contact.html">Contact Us</a>
+    <a class="services-button" href="services.html">Services</a>
   </div>
 
   </div>
